[package]
name = "lfs-dal"
version = "0.1.3"
edition = "2021"
description = "A custom transfer agent for Git LFS powered by OpenDAL."
license = "MIT"
readme = "README.md"
repository = "https://github.com/regen100/lfs-dal"
keywords = ["linter"]
categories = ["command-line-utilities", "development-tools"]
include = ["LICENSE", "src/"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
futures-util = "0.3.30"
gix-config = "0.38.0"
log = "0.4.22"
opendal = { version = "0.47.3", features = ["services-azblob", "services-dropbox", "services-fs", "services-gcs", "services-gdrive", "services-memory", "services-onedrive", "services-s3", "services-webdav", "services-webhdfs"] }
serde = "1.0.204"
serde_json = "1.0.120"
simplelog = "0.12.2"
tokio = { version = "1.39.2", features = ["fs", "io-std", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["compat"] }

[dev-dependencies]
tempfile = "3.10.1"
